[gd_scene load_steps=22 format=2]

[ext_resource path="res://scene/fight_scene.gd" type="Script" id=1]
[ext_resource path="res://char/scripts/ralsei.gd" type="Script" id=2]
[ext_resource path="res://art/fonts/rainyedited.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://char/scripts/kris.gd" type="Script" id=4]
[ext_resource path="res://char/scripts/susie.gd" type="Script" id=5]
[ext_resource path="res://char/attacks/attack_punch.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/fonts/picotron.ttf" type="DynamicFontData" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5, 0.2, 4 )

[sub_resource type="SpatialMaterial" id=11]
flags_unshaded = true
albedo_color = Color( 0, 1, 1, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.4, 0.4, 0.4 )

[sub_resource type="SpatialMaterial" id=12]
flags_unshaded = true
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=13]
flags_unshaded = true
albedo_color = Color( 1, 0, 1, 1 )

[sub_resource type="Environment" id=14]
background_mode = 1
ambient_light_color = Color( 0.054902, 0.054902, 0.054902, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0.623529 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="DynamicFont" id=8]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 1, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="DynamicFont" id=9]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 7 )

[node name="fight_scene" type="Spatial"]
script = ExtResource( 1 )

[node name="floor" type="StaticBody" parent="."]

[node name="CSGBox" type="CSGBox" parent="floor"]
width = 12.0
height = 0.4
depth = 10.0

[node name="CollisionShape" type="CollisionShape" parent="floor"]
shape = SubResource( 1 )

[node name="decor" type="Spatial" parent="."]

[node name="CSGBox" type="CSGBox" parent="decor"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 2.03528, 9.8637 )
width = 0.465
height = 10.0
depth = 0.296

[node name="CSGBox2" type="CSGBox" parent="decor"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 4, 1, 7 )
width = 1.2
height = 10.0
depth = 1.0

[node name="CSGBox3" type="CSGBox" parent="decor"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 8, 2, 1 )
width = 1.2
height = 10.0
depth = 1.0

[node name="CSGBox4" type="CSGBox" parent="decor"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 12, 1, -9 )
width = 0.465
height = 20.0
depth = 0.296

[node name="CSGBox5" type="CSGBox" parent="decor"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 2, 1, -7 )
width = 1.2
height = 20.0
depth = 1.0

[node name="CSGBox6" type="CSGBox" parent="decor"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -5, 2, -10 )
width = 0.465
height = 20.0
depth = 0.296

[node name="CSGBox7" type="CSGBox" parent="decor"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -8, 3, -5 )
width = 1.2
height = 20.0
depth = 1.0

[node name="CSGBox8" type="CSGBox" parent="decor"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -9, -1, 5 )
width = 1.2
height = 20.0
depth = 1.0

[node name="cam_pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1, 2.9, 4.8 )

[node name="camera" type="Camera" parent="cam_pivot"]
transform = Transform( 0.965926, 0.0669871, -0.25, -8.44439e-08, -0.965926, -0.258819, -0.258819, 0.25, -0.933013, 0.00185823, 0, 1.55242 )
cull_mask = 1047555

[node name="Kris" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 3.2 )
script = ExtResource( 4 )
name1 = "Ralsei"
hp = 150
sp = 80

[node name="mesh" type="CSGSphere" parent="Kris"]
radius = 0.4
material = SubResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="Kris"]
shape = SubResource( 5 )

[node name="attacks" type="Node" parent="Kris"]

[node name="attack_punch" parent="Kris/attacks" instance=ExtResource( 6 )]

[node name="attack_punch2" parent="Kris/attacks" instance=ExtResource( 6 )]

[node name="Ralsei" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 3.5 )
script = ExtResource( 2 )
sp = 150

[node name="mesh" type="CSGSphere" parent="Ralsei"]
radius = 0.4
material = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Ralsei"]
shape = SubResource( 5 )

[node name="attacks" type="Node" parent="Ralsei"]

[node name="attack_punch" parent="Ralsei/attacks" instance=ExtResource( 6 )]

[node name="attack_punch2" parent="Ralsei/attacks" instance=ExtResource( 6 )]

[node name="Susie" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 3.2 )
script = ExtResource( 5 )
name1 = "Susie"
hp = 200
sp = 80

[node name="mesh" type="CSGSphere" parent="Susie"]
radius = 0.4
material = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Susie"]
shape = SubResource( 5 )

[node name="attacks" type="Node" parent="Susie"]

[node name="attack_punch" parent="Susie/attacks" instance=ExtResource( 6 )]

[node name="attack_punch2" parent="Susie/attacks" instance=ExtResource( 6 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 14 )

[node name="ui" type="Node2D" parent="."]

[node name="select_fx" type="Node2D" parent="ui"]

[node name="rect5" type="ColorRect" parent="ui/select_fx"]
margin_left = -19.0
margin_top = -19.0
margin_right = -18.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 20, 20 )
color = Color( 0, 0, 0, 1 )

[node name="rect6" type="ColorRect" parent="ui/select_fx"]
margin_left = -19.0
margin_top = -19.0
margin_right = 21.0
margin_bottom = -18.0
rect_pivot_offset = Vector2( 20, 20 )
color = Color( 0, 0, 0, 1 )

[node name="rect7" type="ColorRect" parent="ui/select_fx"]
margin_left = 20.0
margin_top = -19.0
margin_right = 21.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 20, 20 )
color = Color( 0, 0, 0, 1 )

[node name="rect8" type="ColorRect" parent="ui/select_fx"]
margin_left = -19.0
margin_top = 20.0
margin_right = 21.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 20, 20 )
color = Color( 0, 0, 0, 1 )

[node name="rect" type="ColorRect" parent="ui/select_fx"]
margin_left = -20.0
margin_top = -20.0
margin_right = -19.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 20, 20 )
color = Color( 1, 1, 1, 0.498039 )

[node name="rect2" type="ColorRect" parent="ui/select_fx"]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = -19.0
rect_pivot_offset = Vector2( 20, 20 )
color = Color( 1, 1, 1, 0.498039 )

[node name="rect3" type="ColorRect" parent="ui/select_fx"]
margin_left = 19.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 20, 20 )
color = Color( 1, 1, 1, 0.498039 )

[node name="rect4" type="ColorRect" parent="ui/select_fx"]
margin_left = -20.0
margin_top = 19.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 20, 20 )
color = Color( 1, 1, 1, 0.498039 )

[node name="hpbar" type="ProgressBar" parent="ui/select_fx"]
margin_left = -19.0
margin_top = -24.0
margin_right = 19.0
margin_bottom = -22.0
custom_styles/fg = SubResource( 16 )
custom_styles/bg = SubResource( 17 )
value = 50.0
percent_visible = false

[node name="char_info" type="Node2D" parent="ui"]

[node name="bg" type="ColorRect" parent="ui/char_info"]
margin_left = 23.0
margin_top = 253.0
margin_right = 158.0
margin_bottom = 348.0
rect_rotation = -8.72275
color = Color( 0, 0, 0, 0.564706 )

[node name="bg2" type="ColorRect" parent="ui/char_info"]
margin_left = 26.0
margin_top = 231.0
margin_right = 94.0
margin_bottom = 267.0
rect_rotation = -8.72275
color = Color( 0, 0, 0, 0.564706 )

[node name="name_text" type="Label" parent="ui/char_info"]
margin_left = 51.0
margin_top = 243.0
margin_right = 91.0
margin_bottom = 258.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Kris"

[node name="line" type="Line2D" parent="ui/char_info"]
points = PoolVector2Array( 186, -53, 0, 0 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )

[node name="linepos" type="Node2D" parent="ui/char_info"]
position = Vector2( 85, 249 )

[node name="hp" type="ProgressBar" parent="ui/char_info"]
margin_left = 53.0
margin_top = 289.0
margin_right = 144.0
margin_bottom = 297.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false

[node name="hptext" type="Label" parent="ui/char_info"]
margin_left = 53.0
margin_top = 273.0
margin_right = 97.0
margin_bottom = 288.0
custom_colors/font_color = Color( 0.164706, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "100/100"

[node name="sp" type="ProgressBar" parent="ui/char_info"]
margin_left = 53.0
margin_top = 317.0
margin_right = 144.0
margin_bottom = 325.0
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false

[node name="sptext" type="Label" parent="ui/char_info"]
margin_left = 53.0
margin_top = 301.0
margin_right = 97.0
margin_bottom = 316.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "100/100"

[node name="attack_select" type="Node2D" parent="ui"]

[node name="bg" type="ColorRect" parent="ui/attack_select"]
margin_left = 86.8098
margin_top = -36.0
margin_right = 498.81
margin_bottom = 97.0
rect_rotation = 87.8069
color = Color( 0, 0.368627, 0.380392, 0.521569 )

[node name="bg2" type="ColorRect" parent="ui/attack_select"]
margin_left = 71.8098
margin_top = -16.0
margin_right = 464.81
margin_bottom = 117.0
rect_rotation = 93.5098
color = Color( 0, 0.368627, 0.380392, 0.521569 )

[node name="enemy_info" type="Node2D" parent="ui"]

[node name="rect" type="ColorRect" parent="ui/enemy_info"]
margin_left = 509.0
margin_top = 160.0
margin_right = 632.0
margin_bottom = 340.0
color = Color( 0, 0, 0, 0.14902 )

[node name="rect2" type="ColorRect" parent="ui/enemy_info"]
margin_left = 501.0
margin_top = 154.0
margin_right = 624.0
margin_bottom = 334.0
color = Color( 0, 0, 0, 0.14902 )

[node name="rect3" type="ColorRect" parent="ui/enemy_info"]
margin_left = 514.0
margin_top = 151.0
margin_right = 637.0
margin_bottom = 331.0
color = Color( 0, 0, 0, 0.14902 )

[node name="enemy_health" type="ProgressBar" parent="ui/enemy_info"]
margin_left = 516.0
margin_top = 189.0
margin_right = 520.0
margin_bottom = 203.0
percent_visible = false

[node name="enemy_name" type="Label" parent="ui/enemy_info"]
margin_left = 524.0
margin_top = 164.0
margin_right = 564.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 15 )
text = "Lunger"

[node name="win_screen" type="Node2D" parent="ui"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -212 )

[node name="label" type="Label" parent="ui/win_screen"]
margin_top = 168.0
margin_right = 640.0
margin_bottom = 182.0
text = "WIN"
align = 1

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 12, 0 )
light_color = Color( 0, 0.486275, 1, 1 )
light_energy = 0.38
light_cull_mask = 4294966275
shadow_enabled = true
shadow_color = Color( 0.501961, 0.501961, 0.501961, 1 )
directional_shadow_mode = 0
directional_shadow_split_1 = 0.059
directional_shadow_split_2 = 0.179
directional_shadow_split_3 = 0.306
directional_shadow_normal_bias = 0.0
directional_shadow_bias_split_scale = 1.0
directional_shadow_depth_range = 1

[node name="enemy_initial_pos" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -3 )
